--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/mixins/_page-header.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/mixins/_page-header.scss
@@ -1,7 +1,26 @@
-@mixin linear-gradient($color1, $color2) {
-  background: $color1; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(90deg, $color1, $color2); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(90deg, $color1, $color2); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(90deg, $color1, $color2); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(0deg, $color1, $color2); /* Standard syntax */
+@mixin gradient($direction, $color1, $color2) {
+  // Fallback for browsers that do not support gradients
+  background-color: $color1;
+
+  // Define gradient for modern browsers
+  $gradient: "linear-gradient({$direction}, $color1, $color2)";
+
+  // Vendor-specific prefixes
+  $gradients: (
+    "-webkit-" : "-webkit-{$gradient}",
+    "-o-" : "-o-{$gradient}",
+    "-moz-" : "-moz-{$gradient}"
+  );
+
+  // Apply gradient
+  @each $vendor, $value in $gradients {
+    background: $value;
+  }
+
+  // Apply standard syntax for modern browsers
+  background: $gradient;
 }
+
+// Usage
+@include gradient(90deg, #ff0000, #00ff00);
+
