--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/mixins/_inputs.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/mixins/_inputs.scss
@@ -1,23 +1,30 @@
+$white: #fff;
+$background-black: #000;
+$opacity-5: rgba($white, 0.5);
+$opacity-8: rgba($white, 0.8);
+$white-color: #fff;
+$transparent-bg: rgba($background-black, 0.2);
+
 @mixin input-size($padding-vertical, $padding-horizontal) {
   padding: $padding-vertical $padding-horizontal;
 }
 
 @mixin form-control-placeholder($color, $opacity) {
-  .form-control::-moz-placeholder {
+  &::-moz-placeholder {
     color: $color;
-    @include opacity(1);
+    @include opacity($opacity);
   }
-  .form-control:-moz-placeholder {
+  &:-moz-placeholder {
     color: $color;
-    @include opacity(1);
+    @include opacity($opacity);
   }
-  .form-control::-webkit-input-placeholder {
+  &::-webkit-input-placeholder {
     color: $color;
-    @include opacity(1);
+    @include opacity($opacity);
   }
-  .form-control:-ms-input-placeholder {
+  &:-ms-input-placeholder {
     color: $color;
-    @include opacity(1);
+    @include opacity($opacity);
   }
 }
 
@@ -25,15 +32,12 @@
   &::-moz-placeholder {
     @content;
   }
-  // Firefox
   &:-ms-input-placeholder {
     @content;
   }
-  // Internet Explorer 10+
   &::-webkit-input-placeholder {
     @content;
   }
-  // Safari and Chrome
 }
 
 @mixin light-form() {
@@ -41,202 +45,95 @@
   border: 0;
   padding: 0;
   background-color: transparent;
-
 }
 
+@mixin form-control-base {
+  border-color: $opacity-5;
+  color: $opacity-8;
+
+  &:focus {
+    border-color: $white-color;
+    background-color: $transparent-bg;
+    color: $white-color;
+  }
+}
+
+@mixin input-group-addon-styles {
+  background-color: $transparent-bg;
+  border-color: $opacity-5;
+  color: $opacity-8;
+}
 
 @mixin form-control-lg-padding($padding-vertical, $padding-horizontal) {
+  $padding-values: ($padding-vertical, $padding-horizontal, $padding-vertical, $padding-horizontal);
+
   .form-group.no-border.form-control-lg,
   .input-group.no-border.form-control-lg {
     .input-group-append .input-group-text {
-      padding: $padding-vertical 0 $padding-vertical $padding-horizontal;
+      @include input-size($padding-values...);
     }
 
     .form-control {
-      padding: $padding-vertical $padding-horizontal;
+      @include input-size($padding-values...);
 
       & + .input-group-prepend .input-group-text,
       & + .input-group-append .input-group-text {
-        padding: $padding-vertical $padding-horizontal $padding-vertical 0;
+        @include input-size($padding-vertical, 0, $padding-vertical, $padding-horizontal);
       }
-
-
     }
   }
 
   .form-group.form-control-lg,
   .input-group.form-control-lg {
     .form-control {
-      padding: $padding-vertical - 1 $padding-horizontal - 1;
+      @include input-size($padding-vertical - 1, $padding-horizontal - 1);
       height: 100%;
 
       & + .input-group-prepend .input-group-text,
       & + .input-group-append .input-group-text {
-        padding: $padding-vertical - 1 $padding-horizontal - 1 $padding-vertical - 1 0;
+        @include input-size($padding-vertical - 1, 0, $padding-vertical - 1, $padding-horizontal - 1);
       }
     }
 
     .input-group-prepend .input-group-text,
     .input-group-append .input-group-text {
-      padding: $padding-vertical - 1 0 $padding-vertical $padding-horizontal - 1;
+      @include input-size($padding-vertical - 1, 0, $padding-vertical - 1, $padding-horizontal - 1);
 
       & + .form-control {
-        padding: $padding-vertical $padding-horizontal - 1 $padding-vertical $padding-horizontal - 3;
+        @include input-size($padding-vertical - 1, $padding-horizontal - 1, $padding-vertical - 1, $padding-horizontal - 3);
       }
     }
   }
 }
 
-
 @mixin input-base-padding($padding-vertical, $padding-horizontal) {
+  $padding-values: ($padding-vertical, $padding-horizontal, $padding-vertical, $padding-horizontal);
+
   .form-group.no-border,
   .input-group.no-border {
     .form-control {
-      padding: $padding-vertical $padding-horizontal;
+      @include input-size($padding-values...);
 
       & + .input-group-prepend .input-group-text,
       & + .input-group-append .input-group-text {
-        padding: $padding-vertical $padding-horizontal $padding-vertical 0;
+        @include input-size($padding-vertical, 0, $padding-vertical, $padding-horizontal);
       }
     }
 
     .input-group-prepend .input-group-text,
     .input-group-append .input-group-text {
-      padding: $padding-vertical 0 $padding-vertical $padding-horizontal;
+      @include input-size($padding-vertical, 0, $padding-vertical, $padding-horizontal);
+
+      & + .form-control,
+      & ~ .form-control {
+        @include input-size($padding-vertical, $padding-horizontal, $padding-vertical, $padding-horizontal - 3);
+      }
     }
   }
 
   .form-group,
   .input-group {
     .form-control {
-      padding: $padding-vertical - 1 $padding-horizontal - 1 $padding-vertical - 1 $padding-horizontal - 1;
+      @include input-size($padding-vertical - 1, $padding-horizontal - 1);
 
-      & + .input-group-prepend .input-group-text,
-      & + .input-group-append .input-group-text {
-        padding: $padding-vertical - 1 $padding-horizontal - 1 $padding-vertical - 1 0;
-      }
-    }
-
-    .input-group-prepend .input-group-text,
-    .input-group-append .input-group-text {
-      padding: $padding-vertical - 1 0 $padding-vertical - 1 $padding-horizontal - 1;
-
-      & + .form-control,
-      & ~ .form-control {
-        padding: $padding-vertical - 1 $padding-horizontal $padding-vertical $padding-horizontal - 3;
-      }
-    }
-  }
-}
-
-
-//color1 = $opacity-5
-//color2 = $opacity-8
-//color3 = $white-color
-//color4 = $transparent-bg
-//color5 = $opacity-1
-//color6 = $opacity-2
-
-
-@mixin input-coloured-bg($color1, $color2, $color3, $color4, $color5, $color6) {
-  @include form-control-placeholder(rgba($white, 0.4), 1);
-
-  .form-control {
-    border-color: $color1;
-    color: $color2;
-
-    &:focus {
-      border-color: $color3;
-      background-color: $color4;
-      color: $color3;
-    }
-  }
-
-  .has-success,
-  .has-danger {
-    &:after {
-      color: $color3;
-    }
-  }
-
-  .has-danger {
-    .form-control {
-      background-color: $color4;
-    }
-  }
-
-  .input-group-prepend {
-    margin-right: 0;
-  }
-
-  .input-group-prepend .input-group-text,
-  .input-group-append .input-group-text {
-    background-color: rgba($background-black, 0.2);
-    border-color: $color1;
-    color: $color2;
-
-
-  }
-
-  .input-group-focus {
-    .input-group-prepend .input-group-text,
-    .input-group-append .input-group-text {
-      background-color: rgba($background-black, 0.3);
-      border-color: $color3;
-      color: $color3;
-    }
-  }
-
-  .form-group.no-border,
-  .input-group.no-border {
-    .form-control {
-      background-color: rgba($background-black, 0.2);
-      color: $color2;
-
-      &:focus,
-      &:active,
-      &:active {
-        background-color: rgba($background-black, 0.3);
-        color: $color3;
-      }
-    }
-
-    .form-control + .input-group-prepend .input-group-text,
-    .form-control + .input-group-append .input-group-text {
-      background-color: rgba($background-black, 0.2);;
-
-      &:focus,
-      &:active,
-      &:active {
-        background-color: rgba($background-black, 0.3);
-        color: $color3;
-      }
-    }
-
-    .form-control {
-      &:focus {
-        & + .input-group-prepend .input-group-text,
-        & + .input-group-append .input-group-text {
-          background-color: rgba($background-black, 0.3);
-          color: $color3;
-        }
-      }
-    }
-
-    .input-group-prepend .input-group-text,
-    .input-group-append .input-group-text {
-      background-color: rgba($background-black, 0.2);
-      border: none;
-      color: $color2;
-    }
-
-    &.input-group-focus {
-      .input-group-prepend .input-group-text,
-      .input-group-append .input-group-text {
-        background-color: rgba($background-black, 0.3);
-        color: $color3;
-      }
-    }
-  }
-
-}
+      & + .input-group-prepend
