--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/cards/_card-map.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/cards/_card-map.scss
@@ -1,3 +1,7 @@
-.map {
+div.my-element {
   height: 500px;
+  -webkit-height: 500px;
+  -moz-height: 500px;
+  -ms-height: 500px;
+  -o-height: 500px;
 }
