--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_rtl.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_rtl.scss
@@ -1,181 +1,113 @@
+/* General Styles */
 .rtl {
-  .sidebar,
-  .bootstrap-navbar {
-    right: 0;
-    left: auto;
-    margin-right: 20px;
-    margin-left: 0;
+  direction: rtl;
+}
 
-    .nav {
+.sidebar,
+.bootstrap-navbar {
+  margin-right: 20px;
+  margin-left: 0;
+}
+
+.nav i {
+  float: right;
+  margin-left: 15px;
+  margin-right: 0;
+}
+
+p {
+  margin-right: 45px;
+  text-align: right;
+}
+
+.caret {
+  left: 11px;
+}
+
+.sidebar-wrapper .nav [data-toggle="collapse"] ~ div > ul > li > a .sidebar-mini-icon,
+.sidebar-wrapper .user .info [data-toggle="collapse"] ~ div > ul > li > a .sidebar-mini-icon {
+  float: right;
+  margin-left: 15px;
+  margin-right: 0;
+}
+
+.sidebar-wrapper > .nav [data-toggle="collapse"] ~ div > ul > li > a .sidebar-normal,
+.sidebar-wrapper .user .info [data-toggle="collapse"] ~ div > ul > li > a .sidebar-normal {
+  text-align: right;
+}
+
+.dropdown-toggle:after {
+  margin-right: .255em;
+  margin-left: 0;
+}
+
+.dropdown-menu.dropdown-menu-right.dropdown-navbar {
+  right: -220px !important;
+  left: auto;
+}
+
+.notification {
+  left: 40px;
+}
+
+.dropdown-menu {
+  right: auto;
+  left: 0;
+}
+
+.card-timeline .timeline .timeline-footer .btn {
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.navbar-minimize-fixed {
+  margin-right: 38px;
+  margin-left: auto;
+}
+
+.minimize-sidebar {
+  float: right;
+}
+
+.alert {
+  left: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.search-bar {
+  margin-left: 0;
+}
+
+.modal-search .modal-header .close {
+  margin-right: auto;
+  left: 10px;
+}
+
+.ps__rail-y {
+  right: auto !important;
+  left: 0;
+}
+
+.card.card-timeline {
+  .timeline .timeline-footer {
+    .btn.dropdown-toggle {
       i {
-        float: right;
-        margin-left: 15px;
-        margin-right: 0;
+        left: 0 !important;
       }
 
-      p {
-        margin-right: 45px;
-        text-align: right;
-      }
-
-      .caret {
-        left: 11px;
-        right: auto;
-      }
-
-      li.active a {
-        &:before {
-          left: auto !important;
-          right: -4px;
-        }
+      &:after {
+        margin-left: 5px !important;
       }
     }
-
-    .logo {
-      a.logo-mini {
-        float: right;
-        margin-right: 20px;
-        margin-left: 10px;
-      }
-
-      .simple-text {
-        text-align: right;
-      }
-    }
-
-    .sidebar-wrapper .nav [data-toggle="collapse"] ~ div > ul > li > a .sidebar-mini-icon,
-    .sidebar-wrapper .user .info [data-toggle="collapse"] ~ div > ul > li > a .sidebar-mini-icon {
-      float: right;
-      margin-left: 15px;
-      margin-right: 0;
-    }
-
-    .sidebar-wrapper > .nav [data-toggle="collapse"] ~ div > ul > li > a .sidebar-normal,
-    .sidebar-wrapper .user .info [data-toggle="collapse"] ~ div > ul > li > a .sidebar-normal {
-      text-align: right;
-    }
-
-    &:before {
-      right: 30px;
-      left: auto;
-    }
-  }
-
-  .main-panel {
-    position: fixed;
-    height: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
-
-  .main-panel .content {
-    padding: 110px 300px 20px 50px
-  }
-
-  .dropdown-toggle:after {
-    margin-right: .255em;
-    margin-left: 0;
-  }
-
-  .dropdown-menu.dropdown-menu-right.dropdown-navbar {
-    right: -220px !important;
-    left: auto;
-
-    &:before {
-      right: auto;
-      left: 35px;
-    }
-  }
-
-  .notification {
-    left: 40px;
-    right: auto;
-  }
-
-  .dropdown-menu {
-    right: auto;
-    left: 0;
-  }
-
-  .card-timeline .timeline .timeline-footer .btn {
-    margin-left: 0;
-    margin-right: auto;
-  }
-
-  .navbar-minimize-fixed {
-    margin-right: 38px;
-    margin-left: auto;
-  }
-
-  .minimize-sidebar {
-    float: right;
-  }
-
-  .alert {
-    left: 0;
-    margin-left: 0;
-    margin-right: 0;
-
-    button.close {
-      left: 10px !important;
-      right: auto !important;
-    }
-
-    span[data-notify="icon"] {
-      right: 15px;
-      left: auto;
-    }
-
-
-    &.alert-with-icon {
-      padding-right: 65px;
-      padding-left: 15px;
-    }
-
-    &.alert-with-icon i[data-notify="icon"] {
-      right: 15px;
-      left: auto;
-    }
-  }
-
-  .search-bar {
-    margin-left: 0;
-  }
-
-  .modal-search .modal-header .close {
-    margin-right: auto;
-    left: 10px;
-  }
-
-  .rtl .footer {
-    padding: 24px 30px !important;
-  }
-
-  .ps__rail-y {
-    right: auto !important;
-    left: 0;
-  }
-
-  .card.card-timeline {
-    .timeline .timeline-footer {
-      .btn.dropdown-toggle {
-        i {
-          left: 0 !important;
-        }
-
-        &:after {
-          margin-left: 5px !important;
-        }
-      }
-    }
-  }
-
-  .fixed-plugin .dropdown-menu {
-    right: 80px;
   }
 }
 
+.fixed-plugin .dropdown-menu {
+  right: 80px;
+}
 
+/* Media Queries */
 @include media-breakpoint-up(xl) {
   .rtl {
     &.sidebar-mini .main-panel .content {
@@ -280,7 +212,6 @@
   }
 }
 
-
 @include media-breakpoint-down(sm) {
   .rtl {
     .main-panel .content {
@@ -290,10 +221,11 @@
   }
 }
 
-
 @include media-breakpoint-down(xs) {
 
   .rtl .navbar .dropdown-menu {
     width: 200px !important;
   }
 }
+
+/*
