--- a/dashboard/home/templates/static/assets/scss/black-dashboard.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard.scss
@@ -5,112 +5,4 @@
  =========================================================
 
  * Product Page: https://themes.getbootstrap.com/product/black-dashboard-pro-premium-bootstrap-4-admin/
- * Copyright 2019 Creative Tim (http://www.creative-tim.com)
-
-
- =========================================================
-
- * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
- */
-
-// Core
-
-@import "black-dashboard/functions";
-@import "black-dashboard/variables";
-@import "black-dashboard/mixins";
-
-// Bootstrap components
-
-@import "black-dashboard/bootstrap/reboot";
-@import "black-dashboard/bootstrap/type";
-@import "black-dashboard/bootstrap/images";
-@import "black-dashboard/bootstrap/code";
-@import "black-dashboard/bootstrap/grid";
-@import "black-dashboard/bootstrap/tables";
-@import "black-dashboard/bootstrap/forms";
-@import "black-dashboard/bootstrap/buttons";
-@import "black-dashboard/bootstrap/transitions";
-@import "black-dashboard/bootstrap/dropdown";
-@import "black-dashboard/bootstrap/button-group";
-@import "black-dashboard/bootstrap/input-group";
-@import "black-dashboard/bootstrap/custom-forms";
-@import "black-dashboard/bootstrap/nav";
-@import "black-dashboard/bootstrap/navbar";
-@import "black-dashboard/bootstrap/card";
-@import "black-dashboard/bootstrap/breadcrumb";
-@import "black-dashboard/bootstrap/pagination";
-@import "black-dashboard/bootstrap/badge";
-@import "black-dashboard/bootstrap/jumbotron";
-@import "black-dashboard/bootstrap/alert";
-@import "black-dashboard/bootstrap/progress";
-@import "black-dashboard/bootstrap/media";
-@import "black-dashboard/bootstrap/list-group";
-@import "black-dashboard/bootstrap/close";
-@import "black-dashboard/bootstrap/modal";
-@import "black-dashboard/bootstrap/tooltip";
-@import "black-dashboard/bootstrap/popover";
-@import "black-dashboard/bootstrap/carousel";
-
-// Custom components
-
-@import "black-dashboard/custom/reboot";
-@import "black-dashboard/custom/global";
-@import "black-dashboard/custom/utilities";
-@import "black-dashboard/custom/alerts";
-@import "black-dashboard/custom/avatars";
-@import "black-dashboard/custom/badge";
-@import "black-dashboard/custom/buttons";
-@import "black-dashboard/custom/close";
-@import "black-dashboard/custom/custom-forms";
-@import "black-dashboard/custom/dropdown";
-@import "black-dashboard/custom/footer";
-@import "black-dashboard/custom/forms";
-@import "black-dashboard/custom/grid";
-@import "black-dashboard/custom/icons";
-@import "black-dashboard/custom/images";
-@import "black-dashboard/custom/input-group";
-@import "black-dashboard/custom/info-areas";
-@import "black-dashboard/custom/modal";
-@import "black-dashboard/custom/nav";
-@import "black-dashboard/custom/navbar";
-@import "black-dashboard/custom/pagination";
-@import "black-dashboard/custom/tabs";
-@import "black-dashboard/custom/pills";
-@import "black-dashboard/custom/popover";
-@import "black-dashboard/custom/progress";
-@import "black-dashboard/custom/type";
-@import "black-dashboard/custom/tables";
-@import "black-dashboard/custom/checkboxes-radio";
-@import "black-dashboard/custom/fixed-plugin";
-@import "black-dashboard/custom/sidebar-and-main-panel";
-@import "black-dashboard/custom/misc";
-@import "black-dashboard/custom/rtl";
-@import "black-dashboard/custom/timeline";
-
-// Vendor / Plugins
-
-@import "black-dashboard/custom/vendor/plugin-datetimepicker";
-@import "black-dashboard/custom/vendor/plugin-nouislider";
-@import "black-dashboard/custom/vendor/plugin-fullcalendar";
-@import "black-dashboard/custom/vendor/plugin-sweetalert2";
-@import "black-dashboard/custom/vendor/plugin-bootstrap-switch";
-@import "black-dashboard/custom/vendor/plugin-bootstrap-select";
-@import "black-dashboard/custom/vendor/plugin-jasny-fileupload";
-@import "black-dashboard/custom/vendor/plugin-tagsinput";
-@import "black-dashboard/custom/vendor/plugin-perfect-scrollbar";
-@import "black-dashboard/custom/vendor/plugin-jquery.jvectormap";
-@import "black-dashboard/custom/vendor/plugin-datatables.net";
-@import "black-dashboard/custom/vendor/plugin-animate-bootstrap-notify";
-@import "black-dashboard/custom/vendor/plugin-card-wizard";
-@import "black-dashboard/custom/vendor/plugin-chartjs";
-
-// example pages and sections
-
-@import "black-dashboard/custom/example-pages";
-
-// light mode
-
-@import "black-dashboard/custom/white-content";
-
-// C
+ * Copyright 2
