--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/mixins/_popovers.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/mixins/_popovers.scss
@@ -1,18 +1,15 @@
-@mixin popover-variant($background) {
+@mixin popover-variant($background, $color: color-yiq($background), $border-color: rgba(color-yiq($background), 0.2)) {
   background-color: $background;
 
   .popover-header {
     background-color: $background;
-    color: color-yiq($background);
-    opacity: .6;
+    color: $color;
+    opacity: 0.6;
+    border-color: $border-color;
   }
 
   .popover-body {
-    color: color-yiq($background);
-  }
-
-  .popover-header {
-    border-color: rgba(color-yiq($background), .2);
+    color: $color;
   }
 
   &.bs-popover-top {
