--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_carousel.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_carousel.scss
@@ -1,31 +1,23 @@
-// Notes on the classes:
-//
-// 1. .carousel.pointer-event should ideally be pan-y (to allow for users to scroll vertically)
-//    even when their scroll action started on a carousel, but for compatibility (with Firefox)
-//    we're preventing all actions instead
-// 2. The .carousel-item-left and .carousel-item-right is used to indicate where
-//    the active slide is heading.
-// 3. .active.carousel-item is the current slide.
-// 4. .active.carousel-item-left and .active.carousel-item-right is the current
-//    slide in its in-transition state. Only one of these occurs at a time.
-// 5. .carousel-item-next.carousel-item-left and .carousel-item-prev.carousel-item-right
-//    is the upcoming slide in transition.
-
+/* Carousel base class */
 .carousel {
   position: relative;
 }
 
+/* Disable all touch actions for compatibility reasons */
 .carousel.pointer-event {
-  touch-action: pan-y;
+  touch-action: none;
 }
 
+/* Container for carousel items */
 .carousel-inner {
   position: relative;
   width: 100%;
   overflow: hidden;
+  /* Clearfix for floating elements */
   @include clearfix();
 }
 
+/* Individual carousel items */
 .carousel-item {
   position: relative;
   display: none;
@@ -36,12 +28,14 @@
   @include transition($carousel-transition);
 }
 
+/* Active, next, and previous carousel items */
 .carousel-item.active,
 .carousel-item-next,
 .carousel-item-prev {
   display: block;
 }
 
+/* Transition styles for next and previous items */
 .carousel-item-next:not(.carousel-item-left),
 .active.carousel-item-right {
   transform: translateX(100%);
@@ -52,11 +46,7 @@
   transform: translateX(-100%);
 }
 
-
-//
-// Alternate transitions
-//
-
+/* Fade transition styles */
 .carousel-fade {
   .carousel-item {
     opacity: 0;
@@ -79,28 +69,23 @@
   }
 }
 
-
-//
-// Left/right controls for nav
-//
-
+/* Previous and next control styles */
 .carousel-control-prev,
 .carousel-control-next {
   position: absolute;
   top: 0;
   bottom: 0;
   z-index: 1;
-  // Use flex for alignment (1-3)
-  display: flex; // 1. allow flex styles
-  align-items: center; // 2. vertically center contents
-  justify-content: center; // 3. horizontally center contents
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: $carousel-control-width;
   color: $carousel-control-color;
   text-align: center;
   opacity: $carousel-control-opacity;
   @include transition($carousel-control-transition);
 
-  // Hover/focus state
+  /* Hover/focus styles */
   @include hover-focus {
     color: $carousel-control-color;
     text-decoration: none;
@@ -123,7 +108,7 @@
   }
 }
 
-// Icons for within
+/* Previous and next icon styles */
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   display: inline-block;
@@ -140,12 +125,7 @@
   background-image: $carousel-control-next-icon-bg;
 }
 
-
-// Optional indicator pips
-//
-// Add an ordered list with the following class and add a list item for each
-// slide your carousel holds.
-
+/* Optional indicator pips */
 .carousel-indicators {
   position: absolute;
   right: 0;
@@ -154,8 +134,7 @@
   z-index: 15;
   display: flex;
   justify-content: center;
-  padding-left: 0; // override <ol> default
-  // Use the .carousel-control's width as margin so we don't overlay those
+  padding-left: 0;
   margin-right: $carousel-control-width;
   margin-left: $carousel-control-width;
   list-style: none;
@@ -171,7 +150,6 @@
     cursor: pointer;
     background-color: $carousel-indicator-active-bg;
     background-clip: padding-box;
-    // Use transparent borders to increase the hit area by 10px on top and bottom.
     border-top: $carousel-indicator-hit-area-height solid transparent;
     border-bottom: $carousel-indicator-hit-area-height solid transparent;
     opacity: .5;
@@ -183,11 +161,7 @@
   }
 }
 
-
-// Optional captions
-//
-//
-
+/* Optional captions */
 .carousel-caption {
   position: absolute;
   right: (100% - $carousel-caption-width) / 2;
