--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/utilities/_shadows.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/utilities/_shadows.scss
@@ -1,21 +1,30 @@
-[class*="shadow"] {
-  @if $enable-transitions {
-    transition: $transition-base;
+@keyframes fade-in {
+  0% {
+    box-shadow: none;
+  }
+  100% {
+    box-shadow: $box-shadow;
   }
 }
 
-.shadow-sm--hover:hover {
-  box-shadow: $box-shadow-sm !important;
-}
+.shadow {
+  @if $enable-transitions {
+    transition: $transition-base;
+  }
 
-.shadow--hover:hover {
-  box-shadow: $box-shadow !important;
-}
+  &:where(:hover, :focus, :active) {
+    animation: fade-in 0.3s ease-in-out forwards;
+  }
 
-.shadow-lg--hover:hover {
-  box-shadow: $box-shadow-lg !important;
-}
+  &--sm {
+    @include box-shadow($box-shadow-sm);
+  }
 
-.shadow-none--hover:hover {
-  box-shadow: none !important;
+  &--lg {
+    @include box-shadow($box-shadow-lg);
+  }
+
+  &--none {
+    @include box-shadow(none);
+  }
 }
