--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_clearfix.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/utilities/_clearfix.scss
@@ -1,7 +1,5 @@
-.clearfix {
-  &::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
