--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/cards/_card-pricing.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/cards/_card-pricing.scss
@@ -1,8 +1,26 @@
-.card-pricing {
+$card-bg: $white;
+$card-title-color: rgba($white, 0.9);
+$card-text-color: rgba($white, 0.9);
+$card-shadow: 0px 0px 40px 15px rgba($default-states, 0.3);
+$card-radius: $border-radius-sm;
+
+@mixin card-style {
   position: relative;
   z-index: 1;
-  box-shadow: none;
   min-height: 400px;
+  background: $card-bg;
+  box-shadow: none;
+
+  &.card-raised {
+    z-index: 3;
+    box-shadow: $card-shadow;
+    padding: 20px 0;
+    border-radius: $card-radius;
+
+    img {
+      border-radius: $card-radius;
+    }
+  }
 
   .card-body {
     overflow: hidden;
@@ -12,10 +30,10 @@
       position: relative;
       font-size: 5em;
       font-weight: 900;
-      color: $black;
       text-transform: lowercase;
       margin-left: -5px;
       z-index: 1;
+      color: $card-title-color;
 
       &.card-title-right {
         text-align: right;
@@ -25,7 +43,7 @@
 
     img {
       position: absolute;
-      border-radius: $border-radius-sm;
+      border-radius: $card-radius;
       top: 0;
       left: 0;
       width: 100%;
@@ -33,25 +51,23 @@
     }
 
     .card-prices {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+
       .text-on-front {
-        position: relative;
-        z-index: 2;
-        color: rgba($white, 0.9);
         font-size: 3.6em;
         font-weight: 900;
-        text-align: center;
+        color: $card-text-color;
 
         span {
-
           font-size: 0.7em;
         }
       }
 
       .text-on-back {
         position: relative;
-        z-index: 1;
         font-size: 9.5em;
-        text-align: center;
         margin-top: -160px;
         font-weight: 900;
         color: rgba($default-states, 0.1);
@@ -61,8 +77,7 @@
         font-weight: 600;
         font-size: 0.8em;
         margin-top: -80px;
-        text-align: center;
-        color: rgba($white, 0.9);
+        color: $card-text-color;
       }
     }
   }
@@ -74,94 +89,50 @@
     margin: 80px auto 40px;
 
     li {
-      color: rgba($white, 0.9);
-      background: $transparent-bg;
+      color: $card-text-color;
+      background: transparent;
       text-align: center;
       font-size: 1.2em;
-      font-weight: $font-weight-bold;
+      font-weight: bold;
       padding: 5px 0;
       border: none;
-
     }
   }
+}
 
-  &.card-white {
-    background: $white;
-
-    .card-body {
-      .card-title {
-        color: white;
-      }
-    }
-
-    .card-body .card-prices {
-      .text-on-front, .plan {
-        color: $default-states;
-
-        span {
-          color: $default-states;
-        }
-      }
-    }
-
-    ul li {
-
-      color: $default-states;
-    }
-
-    .list-group-item {
-      background: $transparent-bg;
-    }
-  }
-
-  &.card-primary {
-    .card-body .card-prices {
-      .text-on-back {
-        color: rgba($primary, 0.1);
-      }
-    }
-  }
-
-  &.card-info {
+.card-primary,
+.card-info,
+.card-success,
+.card-warning,
+.card-danger {
+  &.card-body .card-prices {
     .text-on-back {
-      color: rgba($info, 0.1);
+      color: rgba(get-color(primary), 0.1);
     }
   }
+}
 
-  &.card-success {
-    .card-body .card-prices {
-      .text-on-back {
-        color: rgba($success, 0.1);
+.card-white {
+  $card-bg: white;
+  $card-title-color: white;
+
+  &.card-body .card-prices {
+    .text-on-front,
+    .plan {
+      color: $default-states;
+
+      span {
+        color: $default-states;
       }
     }
   }
 
-  &.card-warning {
-    .card-body .card-prices {
-      .text-on-back {
-        color: rgba($warning, 0.1);
-      }
-    }
+  ul li {
+    color: $default-states;
   }
 
-  &.card-danger {
-    .card-body .card-prices {
-      .text-on-back {
-        color: rgba($danger, 0.1);
-      }
-    }
-  }
-
-  &.card-raised {
-    z-index: 3;
-    box-shadow: 0px 0px 40px 15px rgba($default-states, 0.3);
-    padding: 20px 0;
-    margin-top: -20px;
-    border-radius: $border-radius-sm;
-
-    img {
-      border-radius: $border-radius-sm;
-    }
+  .list-group-item {
+    background: transparent;
   }
 }
 
