--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/bootstrap-grid.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/bootstrap-grid.scss
@@ -1,9 +1,4 @@
-/*!
- * Bootstrap Grid v4.3.1 (https://getbootstrap.com/)
- * Copyright 2011-2019 The Bootstrap Authors
- * Copyright 2011-2019 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
+/*! Bootstrap Grid v4.3.1 - https://getbootstrap.com/ - Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE) */
 
 html {
   box-sizing: border-box;
@@ -16,14 +11,4 @@ html {
   box-sizing: inherit;
 }
 
-@import "functions";
-@import "variables";
-
-@import "mixins/breakpoints";
-@import "mixins/grid-framework";
-@import "mixins/grid";
-
-@import "grid";
-@import "utilities/display";
-@import "utilities/flex";
-@import "utilities/spacing";
+@import "functions", "variables", "mixins/breakpoints", "mixins/grid-framework", "mixins/grid", "grid", "utilities/display", "utilities/flex", "utilities/spacing";
